# WT02E40E-WiFi-BLE-UART-Demo

./: CMakeLists.txt  Kconfig  README.md  WT02E40E_COMMANDS.md  app.overlay  prj.conf  sysbuild.conf
BLE_Webapp/: README.md  index.html  server.js
src/: main.c  wt_app.c  wt_app.h  wt_ble.c  wt_ble.h  wt_common.c  wt_common.h  wt_config.h  wt_leds.c  wt_leds.h  wt_radio.c  wt_radio.h  wt_shell.c  wt_stream.c  wt_stream.h  wt_wifi.c  wt_wifi.h
wt02e40e_openocd_stlink/: README_OPENOCD_STLINK.md  flash_wt02e40e_stlink_openocd.bat  flash_wt02e40e_stlink_openocd_legacy_hla.bat  make_wt02e40e_merged_hex.bat  wt02e40e_nrf5340_stlink_dap.cfg  wt02e40e_nrf5340_stlink_legacy_hla.cfg
